<resources>
    <!-- General -->
    <string name="app_name" translatable="false">AlphaWall</string>
    <string name="item_description">Wallpaper</string>
    <string name="fab_up">Go up</string>
    <string name="navigation_home_label">Home</string>
    <string name="navigation_search_label">Search</string>
    <string name="navigation_detail_label">Wallpaper</string>
    <string name="navigation_categories_label">Categories</string>
    <string name="navigation_settings_label">Settings</string>

    <!-- App bar menu -->
    <string name="menu_main_search">Search</string>
    <string name="menu_main_sort">Sort</string>

    <!-- Search -->
    <string name="search_hint">Search AlphaWall</string>
    <string name="search_btn_text">Search</string>
    <string name="search_guide_text">Search wallpapers by keyword</string>

    <!-- Sort dialog -->
    <string name="dialog_sort_title">Sort wallpapers by</string>
    <string name="dialog_sort_button">Apply</string>
    <string name="dialog_sort_newest">newest</string>
    <string name="dialog_sort_rating">rating</string>
    <string name="dialog_sort_views">views</string>
    <string name="dialog_sort_favorites">favorites</string>

    <!-- Bottom navigation -->
    <string name="menu_bottom_nav_home">Home</string>
    <string name="menu_bottom_nav_categories">Categories</string>
    <string name="menu_bottom_nav_settings">Settings</string>

    <!-- Home Fragment -->
    <string name="error_network">Network error</string>
    <string name="btn_retry">Retry</string>

    <!-- Detail Fragment -->
    <string name="btn_page">Web</string>
    <string name="btn_download">Download</string>
    <string name="btn_set">Set</string>
    <string name="wallpaper_size">%1$sMB</string>
    <string name="wallpaper_resolution">%1$sx%2$s</string>
    <string name="wallpaper_category">%1$s</string>
    <string name="wallpaper_submitter">%1$s</string>
    <string name="error_image_save">Failed to save image</string>
    <string name="image_saved">Image saved to Pictures/Wallpapers</string>
    <string name="image_already_saved">Image is already saved in Pictures/Wallpapers</string>
    <string name="image_set_as">Set as:</string>
    <string name="permission_storage_enable">Please enable storage permission to download or set image as your wallpaper</string>
    <string name="permission_rationale_reason">Storage permissions are needed to download and set wallpaper</string>
    <string name="permission_rationale_ok">OK</string>
    <string name="permission_rationale_cancel">Cancel</string>

    <!-- View Mode -->
    <string name="view_mode_key" translatable="false">view_mode</string>
    <string name="view_mode_title">View mode</string>
    <string name="view_mode_description">List, Grid</string>
    <string name="view_mode_value_list" translatable="false">list</string>
    <string name="view_mode_value_grid" translatable="false">grid</string>
    <string name="view_mode_entry_list">List</string>
    <string name="view_mode_entry_grid">Grid</string>

    <!-- Theme -->
    <string name="ui_header">UI</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_title">Theme</string>
    <string name="theme_description">System, Light, Dark</string>
    <string name="theme_value_system" translatable="false">system</string>
    <string name="theme_value_light" translatable="false">light</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_entry_system">System default</string>
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>

    <!-- About -->
    <string name="about_header">About</string>
    <string name="app_key" translatable="false">app</string>
    <string name="author_key" translatable="false">author</string>
    <string name="author_title">Developer</string>
    <string name="author_summary" translatable="false">Jankku</string>

    <string name="github_key" translatable="false">github</string>
    <string name="github_title" translatable="false">GitHub</string>
    <string name="github_summary" translatable="false">https://github.com/jankku/alphawall</string>

    <string name="logo_design_key" translatable="false">logo_author</string>
    <string name="logo_design_title" translatable="false">Logo design</string>
    <string name="logo_design_summary" translatable="false">Léandro Tijink</string>

    <string name="api_key" translatable="false">api</string>
    <string name="api_title" translatable="false">Powered By Wallpaper Abyss</string>
    <string name="api_summary">https://wall.alphacoders.com/api.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>