<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_header">
        <Preference
            app:icon="@drawable/ic_android"
            app:key="@string/app_key"
            app:title="@string/app_name" />

        <Preference
            app:icon="@drawable/ic_person"
            app:key="@string/author_key"
            app:summary="@string/author_summary"
            app:title="@string/author_title" />

        <Preference
            app:icon="@drawable/ic_github"
            app:key="@string/github_key"
            app:summary="@string/github_summary"
            app:title="@string/github_title" />

        <Preference
            app:icon="@drawable/ic_api"
            app:key="@string/api_key"
            app:summary="@string/api_summary"
            app:title="@string/api_title" />
    </PreferenceCategory>

</PreferenceScreen>