<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sort_title"
        android:paddingBottom="12dp"
        style="@style/TextAppearance.MaterialComponents.Headline6" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/action_sort_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialog_sort_newest" />

        <RadioButton
            android:id="@+id/action_sort_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sort_rating" />

        <RadioButton
            android:id="@+id/action_sort_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sort_views" />

        <RadioButton
            android:id="@+id/action_sort_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sort_favorites" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dialog_sort_button" />

</LinearLayout>