<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jankku.alphawall.ui.home.HomeFragment"
        android:label="@string/navigation_home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_wallpaperDetailFragment"
            app:destination="@id/wallpaperDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/wallpaperDetailFragment"
        android:name="com.jankku.alphawall.ui.WallpaperDetailFragment"
        android:label="@string/navigation_detail_label"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="wallpaper"
            app:argType="com.jankku.alphawall.database.model.Wallpaper" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.jankku.alphawall.ui.search.SearchFragment"
        android:label="@string/navigation_search_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_wallpaperDetailFragment"
            app:destination="@id/wallpaperDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

</navigation>